--- a/css/ranking.css
+++ b/css/ranking.css
@@ -72,20 +72,26 @@ footer{
     display: grid;
     grid-template-columns: 50vw;
     padding: 0;
+    padding-top: 5vh;
     margin: 0;
     margin-left: 25vw;
-    grid-gap: 10px;
+    grid: gap 2px;
     align-items: center;
     align-content: center;
-    grid-auto-rows: minmax(100px, auto);
 }
 
 .case{
     border: solid 2px grey;
+    width: 100%;
+    border-bottom: solid 0px transparent;
     padding-left: 20px;
+    padding-right: 20px;
+}
+
+.ranking .case:last-of-type{
+    border-bottom: solid 2px grey;
 }
 
 .alignedroite{
     float: right;
-    padding-right: 20px;
 }
