--- a/css/account.css
+++ b/css/account.css
@@ -1,11 +1,3 @@
-body{
-    font-family: 'Poppins', sans-serif;
-    background-color: #FDFDFF;
-    margin:0;
-    padding:0;
-
-}
-
 /*Footer*/
 footer{
   bottom: 0;
@@ -18,29 +10,76 @@ footer{
   color: #fff;
 }
 
-.ranking{
-    display: grid;
-    grid-template-columns: 50vw;
-    padding: 0;
-    padding-top: 5vh;
-    margin: 0;
-    margin-left: 25vw;
-    align-items: center;
-    align-content: center;
-}
-
-.case{
-    border: solid 2px grey;
+.tab button {
+    display: block;
+    background-color: inherit;
+    color: black;
+    padding: 22px 16px;
     width: 100%;
-    border-bottom: solid 0px transparent;
-    padding-left: 20px;
-    padding-right: 20px;
-}
+    border: none;
+    outline: none;
+    text-align: left;
+    cursor: pointer;
+    transition: 0.3s;
+    font-size: 17px;
+  }
+  
+  * {box-sizing: border-box}
+  body {font-family: "Lato", sans-serif;}
+  
+  /* Style the tab */
+  .tab {
+    float: left;
+    margin-left: 5vw;
+    margin-top: 3vh;
+    border: 1px solid #ccc;
+    background-color: #f1f1f1;
+    width: 25vw;
+    height: 300px;
+  }
+  
+  /* Style the buttons inside the tab */
+  .tab button {
+    display: block;
+    background-color: inherit;
+    color: black;
+    padding: 22px 16px;
+    width: 100%;
+    border: none;
+    outline: none;
+    text-align: left;
+    cursor: pointer;
+    transition: 0.3s;
+    font-size: 17px;
+  }
+  
+  /* Change background color of buttons on hover */
+  .tab button:hover {
+    background-color: #ddd;
+  }
+  
+  /* Create an active/current "tab button" class */
+  .tab button.active {
+    background-color: #ccc;
+  }
+  
+  /* Style the tab content */
+  .tabcontent {
+    float: left;
+    padding: 0px 12px;
+    margin-top: 3vh;
+    border: 1px solid #ccc;
+    width: 65vw;
+    border-left: none;
+    height: 300px;
+  }
 
-.ranking .case:last-of-type{
-    border-bottom: solid 2px grey;
-}
+  .error{
+    color: red;
+    text-align: center;
+  }
 
-.alignedroite{
-    float: right;
-}
+  .succes{
+    color: green;
+    text-align: center;
+  }
