--- a/css/common.css
+++ b/css/common.css
@@ -22,8 +22,10 @@ nav{
       background-image: url(img/blank.png);
       background-repeat:no-repeat;
       background-size: contain;
-      width: 9%;
-      height: 100%
+      width: 3vw;
+      margin-top: 1vh;
+      margin-left: 5vw;
+      height: 100%;
   }
   .span{
       color: #8AC144 ;
@@ -36,7 +38,7 @@ nav{
   .bouton{
     font-style: normal;
   font-weight: normal;
-  font-size: 24px;
+  font-size: 3.3vh;
   align-content: center;
   line-height: 36px;
   text-align: center;
@@ -46,3 +48,10 @@ nav{
   border: none;
   }
   
+
+  body{
+    font-family: 'Poppins', sans-serif;
+    background-color: #FDFDFF;
+    margin:0;
+    padding:0;
+}
