--- a/css/common.css
+++ b/css/common.css
@@ -7,6 +7,7 @@ nav{
     top: 0;
     padding-top: 1vh;
     height: 10vh;
+    min-height: 80px;
     width: 100vw;
   }
   
@@ -22,7 +23,9 @@ nav{
       background-image: url(img/blank.png);
       background-repeat:no-repeat;
       background-size: contain;
-      width: 3vw;
+      width: calc(10px + 3vw);
+      vertical-align: sub;
+      margin: 0;
       margin-top: 1vh;
       margin-left: 5vw;
       height: 100%;
@@ -38,7 +41,7 @@ nav{
   .bouton{
     font-style: normal;
   font-weight: normal;
-  font-size: 3.3vh;
+  font-size: calc(15px + 0.75vw);
   align-content: center;
   line-height: 36px;
   text-align: center;
