--- a/css/common.css
+++ b/css/common.css
@@ -7,6 +7,7 @@ nav{
     top: 0;
     padding-top: 1vh;
     height: 10vh;
+    min-height: 80px;
     width: 100vw;
   }
   
@@ -22,8 +23,12 @@ nav{
       background-image: url(img/blank.png);
       background-repeat:no-repeat;
       background-size: contain;
-      width: 9%;
-      height: 100%
+      width: calc(10px + 3vw);
+      vertical-align: sub;
+      margin: 0;
+      margin-top: 1vh;
+      margin-left: 5vw;
+      height: 100%;
   }
   .span{
       color: #8AC144 ;
@@ -36,7 +41,7 @@ nav{
   .bouton{
     font-style: normal;
   font-weight: normal;
-  font-size: 24px;
+  font-size: calc(15px + 0.75vw);
   align-content: center;
   line-height: 36px;
   text-align: center;
@@ -45,49 +50,57 @@ nav{
   padding: 0;
   border: none;
   }
+  
+
+  body{
+    font-family: 'Poppins', sans-serif;
+    background-color: #FDFDFF;
+    margin:0;
+    padding:0;
+}
   /*Footer*/
-footer{
-  position: absolute;
-  margin-top: 20px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  width: 100%;
-  background-color: #2C2C2C;
-  color: #fff;
-  height: auto;
-  bottom: 0vw;
-  font-family: Poppins;
-  margin-left: auto;
-  margin-right: auto;
-}
-.footerbox1{
-  flex: 1;
-  font-family: Poppins;
-  margin-left: auto;
-  margin-right: auto;
-}
-.footerbox2{
-  flex: 2;
-  font-family: Poppins;
-  margin-left: auto;
-  margin-right: auto;
-}
-.link1{
-  text-decoration: none;
-  color: #8AC144 ;
-  padding-left: 1vw;
-  padding-right: 1vw;
-}
-.barre{
-  height: 3px;
-  background-color: white;
-  background-size: cover;
-  width: 45vw;
-  margin-left: auto;
-  margin-right:auto;
-}
-.link2{
-  padding-left: 0.5vw;
-  padding-right: 00.5vw;
-}
+  footer{
+    position: absolute;
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    background-color: #2C2C2C;
+    color: #fff;
+    height: auto;
+    bottom: 0vw;
+    font-family: Poppins;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .footerbox1{
+    flex: 1;
+    font-family: Poppins;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .footerbox2{
+    flex: 2;
+    font-family: Poppins;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .link1{
+    text-decoration: none;
+    color: #8AC144 ;
+    padding-left: 1vw;
+    padding-right: 1vw;
+  }
+  .barre{
+    height: 3px;
+    background-color: white;
+    background-size: cover;
+    width: 45vw;
+    margin-left: auto;
+    margin-right:auto;
+  }
+  .link2{
+    padding-left: 0.5vw;
+    padding-right: 00.5vw;
+  }
