--- a/css/ranking.css
+++ b/css/ranking.css
@@ -1,11 +1,3 @@
-body{
-    font-family: 'Poppins', sans-serif;
-    background-color: #FDFDFF;
-    margin:0;
-    padding:0;
-
-}
-
 /*Footer*/
 footer{
   bottom: 0;
@@ -22,7 +14,7 @@ footer{
     display: grid;
     grid-template-columns: 50vw;
     padding: 0;
-    padding-top: 5vh;
+    padding-top: 1vh;
     margin: 0;
     margin-left: 25vw;
     align-items: center;
@@ -43,4 +35,24 @@ footer{
 
 .alignedroite{
     float: right;
+}
+
+.center{
+    text-align: center;
+}
+
+h2{
+    font-size:calc(30px + 1vw);
+    margin: 1vh;
+    color: #8AC144;
+    padding: 0;
+}
+
+h3{
+    font-size:calc(30px + 1vw);
+    margin: 0;
+    padding-bottom:0 ;
+    margin-top: 5vh;
+    color: #8AC144;
+    padding: 0;
 }
