--- a/css/common.css
+++ b/css/common.css
@@ -58,3 +58,49 @@ nav{
     margin:0;
     padding:0;
 }
+  /*Footer*/
+  footer{
+    position: absolute;
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    background-color: #2C2C2C;
+    color: #fff;
+    height: auto;
+    bottom: 0vw;
+    font-family: Poppins;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .footerbox1{
+    flex: 1;
+    font-family: Poppins;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .footerbox2{
+    flex: 2;
+    font-family: Poppins;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .link1{
+    text-decoration: none;
+    color: #8AC144 ;
+    padding-left: 1vw;
+    padding-right: 1vw;
+  }
+  .barre{
+    height: 3px;
+    background-color: white;
+    background-size: cover;
+    width: 45vw;
+    margin-left: auto;
+    margin-right:auto;
+  }
+  .link2{
+    padding-left: 0.5vw;
+    padding-right: 00.5vw;
+  }
