--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -1,39 +1,45 @@
-/*Footer*/
-footer{
-  bottom: 0;
-  position:absolute;
-  display: block;
-  text-align: center;
-  width: 100%;
-  overflow:hidden;
-  background-color: #2C2C2C;
-  color: #fff;
+.boite{
+    width: 90vw;
+    margin-left: 5vw;
+    justify-content:  center;
 }
 
-.stats{
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-    margin-left: 2vw;
-    margin-right: 2vw;
-    margin-top: 2vw;
-    border: solid 1px black;
-    grid-gap: 1px;
-    background-color: black;
-    text-align: center;
-}
-
-.displaystat{
-    padding: 0;
-    margin: 0;
-    background-color: white;
-}
-
-.imgstat{
-    width: 90%;
-    max-height: 13vw;
-    height: auto;
-}
-
-.displaystat p{
+/* Style the tab */
+.tab {
+    overflow: hidden;
+    border: 1px solid #ccc;
+    background-color: #f1f1f1;
+  }
+  
+  /* Style the buttons that are used to open the tab content */
+  .tab button {
+    background-color: inherit;
+    width: 25%;
+    height: 20vh;
+    min-height: 5vh;
     float: left;
-}
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 2vh 2vh;
+    transition: 0.3s;
+  }
+  
+  /* Change background color of buttons on hover */
+  .tab button:hover {
+    background-color: #ddd;
+  }
+  
+  /* Create an active/current tablink class */
+  .tab button.active {
+    background-color: #ccc;
+  }
+  
+  /* Style the tab content */
+  .tabcontent {
+    height: 50vh;
+    min-height: 100px;
+    display: none;
+    padding: 6px 12px;
+    border: 1px solid #ccc;
+  }
