Changement de html sur le drapeau

--- a/css/index.css
+++ b/css/index.css
@@ -255,8 +255,7 @@ border: none;
  .dropdown-content {
   display: none;
   position: absolute;
-  background-color: white;
-  min-width: 160px;
+  min-width: auto;
   z-index: 1;
 }
 
