--- a/css/index.css
+++ b/css/index.css
@@ -179,7 +179,8 @@ nav{
   top: 0;
   padding-top: 1vh;
   height: 10vh;
-  width: 100vw;
+  min-height: 80px;
+  width: 98vw;
 }
 
 nav .bouton {
@@ -194,8 +195,12 @@ nav .bouton {
     background-image: url(img/blank.png);
     background-repeat:no-repeat;
     background-size: contain;
-    width: 9%;
-    height: 100%
+    width: calc(10px + 3vw);
+    vertical-align: sub;
+    margin: 0;
+    margin-top: 1vh;
+    margin-left: 5vw;
+    height: 100%;
 }
 .span{
     color: #8AC144 ;
@@ -208,7 +213,7 @@ nav .bouton {
 .bouton{
   font-style: normal;
 font-weight: normal;
-font-size: 24px;
+font-size: calc(15px + 0.75vw);
 align-content: center;
 line-height: 36px;
 text-align: center;
@@ -217,11 +222,12 @@ background-color: transparent;
 padding: 0;
 border: none;
 }
+
 .barre{
-  height: 3px;
+  height: 2px;
   background-color: white;
   background-size: cover;
-  width: 45vw;
+  width: 38vw;
   margin-left: auto;
   margin-right:auto;
 }
