--- a/css/ranking.css
+++ b/css/ranking.css
@@ -42,17 +42,27 @@ footer{
 }
 
 h2{
-    font-size:calc(30px + 1vw);
+    font-size:calc(20px + 1vw);
     margin: 1vh;
     color: #8AC144;
     padding: 0;
 }
 
 h3{
-    font-size:calc(30px + 1vw);
+    font-size:calc(20px + 1vw);
     margin: 0;
     padding-bottom:0 ;
-    margin-top: 5vh;
+    margin-top: 2vh;
+    color: #8AC144;
+    padding: 0;
+}
+
+
+h4{
+    font-size:calc(10px + 1vw);
+    margin: 0;
+    padding-bottom:0 ;
+    margin-top: 2vh;
     color: #8AC144;
     padding: 0;
 }
