--- a/css/account.css
+++ b/css/account.css
@@ -40,12 +40,12 @@
   
   /* Change background color of buttons on hover */
   .tab button:hover {
-    background-color: #ddd;
+    background-color: #ccc;
   }
   
   /* Create an active/current "tab button" class */
   .tab button.active {
-    background-color: #ccc;
+    background-color: #96C836;
   }
   
   /* Style the tab content */
@@ -57,8 +57,24 @@
     width: 65vw;
     border-left: none;
     height: 300px;
+    background-image:linear-gradient(to left,white,#96C836);
   }
+ /*bouton1*/
+ .button1{
+   background-color:black;
+   border-radius:500px;
+ }
 
+
+ /* style du dernier boutton*/
+ .lastbutton {
+  
+    margin-left:0%;
+    margin-top: 3vh;
+    width: 65vw;
+    border-left: none;
+    height: 300px;
+ }
   .error{
     color: red;
     text-align: center;
@@ -68,3 +84,27 @@
     color: green;
     text-align: center;
   }
+
+/* boutton deco*/
+.disconnect{
+  margin-left:40vw;
+  margin-top:8vh;
+
+  
+  background-color: #96C836;
+  border-radius: 5px;
+  width: 15vw;
+  height:8vh;
+  padding: 1vmin;
+  border: none;
+  color: #FDFDFF;
+  font-family: Poppins; 
+  font-size: calc(8px + 0.75vw);
+  line-height: 30px;
+
+}
+ /*bouton1*/
+ .button1{
+  background-color:black;
+  border-radius:500px;
+}
