--- a/css/account.css
+++ b/css/account.css
@@ -68,3 +68,12 @@
     color: green;
     text-align: center;
   }
+
+  .disconnect{
+    font-size: 24px;
+    color: red;
+    font-style: none;
+    margin-top: 1vh;
+    float: right;
+    margin-right: 5vw;
+  }
