--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -40,6 +40,26 @@
     height: 50vh;
     min-height: 100px;
     display: none;
+
     padding: 6px 12px;
     border: 1px solid #ccc;
+  }
+
+  .Canvas {
+    width: 50%; 
+    min-width: 400px;
+    margin-left: auto; 
+    margin-right: auto; 
+    height: 60% 
+  }
+
+  .logoDash{
+    width: 15%;
+    min-width: 25px;
+    padding-left: 1vw;
+    vertical-align: middle;
+  }
+
+  .tabTitle{
+    font-size: calc(15px + 0.25vw);
   }
