--- a/css/index.css
+++ b/css/index.css
@@ -29,9 +29,9 @@ h3{
     display: grid;
     grid-template-columns: repeat(3,1fr);
     position: relative;
-    left: 5%;
-    margin-right: 10%;
-    margin-top: 10%;
+    left: 5vw;
+    margin-right: 10vw;
+    margin-top: 15vh;
     grid-gap: 10px;
     text-align: left;
     grid-auto-rows: minmax(5px, auto);
@@ -77,7 +77,7 @@ h3{
 /*Elements centraux de la page d'accueil*/
 .middlemainflex{
   position: static;
-  margin-top: 5%;
+  margin-top: 5vh;
   display: flex;
   align-self: center;
   align-items: center;
@@ -103,11 +103,11 @@ h3{
 }
 
 .txt1{
-  font-size: 96px;
+  font-size:  calc(50px + 3vw);
   line-height: 25px;
 }
 .txt2{
-  font-size: 72px;
+  font-size: calc(42px + 2vw);
   line-height: 108px;
 }
 .txt3{
@@ -121,21 +121,21 @@ h3{
 .rect{
   background: #96C836;
   border-radius: 10px;
-  font-size: 24px;
+  font-size: calc(16px + 0.75vw);
   line-height: 36px;
   text-align: center;
-  min-width: 30%;
+  min-width: 100px;
   color: #FDFDFF;
-  width: 30%; 
+  width: 15vw; 
 }
 .watch1{
-  height: 45%;
-  width: auto;
+  width: 13vw;
+  min-width: 150px;
   margin-right: 2%;
 }
 .watch2{
-  height: 70%;
-  width:auto;
+  min-width: 200px;
+  width: 18vw;
 }
 .footer{
   position: relative;
